Corrected an alignment error in the header

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ header {
 	right:0;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	padding:2rem 10rem;
 	background: #1f2937;
 	background: rgba(0,0,0, 0.50);
@@ -50,12 +51,12 @@ header {
 .logo {
 	font-size: 24px;
 	color: #f9faf8;
+	
 }
 
 .sec1 {
 	background-image:url("../image/genshin-impact3.jpg");   
-	background-position: 0rem -3rem; 
-	background-attachment: fixed;
+	background-attachment:fixed;
 	min-height: 100px; 
 	background-size: cover;
 	background-color: #1f2937;
@@ -64,6 +65,16 @@ header {
 	color: white;
 	display: flex;
 	flex-flow:column;
+}
+
+@media (max-width: 600px) {
+	.sec1 {
+		background-image: url("../image/genshin-impact3.jpg"); 
+		background-position: 0rem -9rem; 
+		background-size:contain;
+
+	}
+	
 }
 
 .sec1 h1 {
@@ -173,6 +184,7 @@ header a {
 	width:80%;
 	height: 100px;
 	background-image: url("../image/genshin-impact3.jpg");
+	background-attachment: fixed;
 	color:white;
 	border-radius:20px;
 	display:flex;
